# devops-coding-challenge

./: .env.template  .gitignore  README.fr.md  README.md  compose.yml  conftest.py  demo.sh  pyproject.toml  s3_lister.py
.github/workflows/: run.yml  test.yml
src/: __init__.py  aws_config.py  main.py  pricing_service.py  s3_lister.py
tests/: __init__.py
tests/e2e/: test_e2e.py
tests/unit/: test_main.py  test_pricing_service.py  test_s3_lister.py
